--- a/birthday-wish/package.json
+++ b/birthday-wish/package.json
@@ -41,5 +41,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://Hasini-Sankalpana.github.io/Birthday"
+  "homepage": "https://hasini-sankalpana.github.io/Birthday/"
 }
